# docker-mlflow

./: Dockerfile  LICENSE  README.md  build.sh  pyproject.toml
.github/workflows/: push_image.yml
hooks/: build
