[tool.poetry]
name = "docker-mlflow"
version = "1.0.0"
description = ""
authors = ["kackyt <t.kakizaki@adacotech.co.jp>"]

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "^1.1.0"
mleap = "^0.17.0"
PyMySQL = "^1.0.2"
psycopg2-binary = "^2.9.1"
boto3 = "^1.19.7"
google-cloud-storage = "^1.42.3"
azure-storage-blob = "^12.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
